디비 매핑 자동생성 작업 중